--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but the D&D Companion App doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <div style='font-family: sans-serif; font-weight: bold; margin-top: 2rem; text-align: center;'>
+        The D&D Companion App requires JavaScript to be enabled to function. Please enable it to continue.
+      </div>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
