--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1,user-scalable=no">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <link href='https://use.fontawesome.com/releases/v5.8.2/css/all.css' rel="stylesheet">
     <title>D&D Companion App</title>
   </head>
   <body>
     <noscript>
-      <div style='font-family: sans-serif; font-weight: bold; margin-top: 2rem; text-align: center;'>
-        The D&D Companion App requires JavaScript to be enabled to function. Please enable it to continue.
-      </div>
+      <strong>
+        <div style='font-family: sans-serif; font-weight: bold; margin-top: 2rem; text-align: center;'>
+          The D&D Companion App requires JavaScript to be enabled to function. Please enable it to continue.
+        </div>
+      </strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
