--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href='https://use.fontawesome.com/releases/v5.12.0/css/all.css' rel="stylesheet">
-    <title>D&D Companion App</title>
+    <title>D&D Companion</title>
   </head>
   <body>
     <noscript>
       <strong>
         <div style='font-family: sans-serif; font-weight: bold; margin-top: 2rem; text-align: center;'>
-          The D&D Companion App requires JavaScript to be enabled to function. Please enable it to continue.
+          The D&D Companion requires JavaScript to be enabled to function. Please enable it to continue.
         </div>
       </strong>
     </noscript>
